# hist-text-utils

./: README.md  pyproject.toml
hist_text_utils/: __init__.py  embeddings.py
hist_text_utils/scripts/: context.py  llm.py  text.py
hist_text_utils/topos/: __init__.py  bounds.py  ground.py  linear.py
